--- a/easy-ads/src/main/AndroidManifest.xml
+++ b/easy-ads/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.iamhabib.easyads">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.iamhabib.easyads">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <application android:allowBackup="true"
+    <application
+        android:allowBackup="true"
         android:supportsRtl="true">
 
         <activity
